--- a/Report/document.bib
+++ b/Report/document.bib
@@ -81,8 +81,12 @@
     title = {COCOS2D},
     howpublished = {\url{http://cocos2d-x.org/}},
 },
-@mist{PolymorphismDef,
+@misc{PolymorphismDef,
     title = {Polymorphism},
     howpublished = {\url{http://lucacardelli.name/Papers/OnUnderstanding.A4.pdf}},
+},
+@misc{Box2D,
+    title = {Box2D},
+    howpublished = {\url{http://box2d.org/about/}},
 },
 
